Stop the notice text from wrapping

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -126,6 +126,10 @@
   }
 }
 
+.download-privacy-notice {
+  display: inline-block;
+}
+
 .popover-content {
   word-wrap: break-word;
 }
